# CSE331-DSA-Project

./: CMakeLists.txt  CompDec.cpp  CompDec.h  Convert.cpp  README.md  Tree.cpp  Tree.h  Validity.cpp  Validity.h  headers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pretty.cpp  pretty.h  treeparse.h
Compress-Decompress/: CompDec.cpp  CompDec.h
TreeParse/: treeparse.cpp  treeparse.h
XML-EDITOR/: CMakeLists.txt  leveltwo.cpp  leveltwo.h  leveltwo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
cli/: CMakeLists.txt  main.cpp
minifier/: minifier.cpp  minifier.hpp
